--- a/index.html
+++ b/index.html
@@ -93,5 +93,9 @@
     	<p>Тел./WhatsApp: +7(918)286-83-59, +7(961)597-37-21</p>
      </div>
 
+     <footer>
+     	Сайт создан Воронковым А.
+     </footer>
+
 </body>
 </html>
